@@ -1,13 +1,12 @@
 package org.openapitools.codegen;
 
-import static org.testng.Assert.assertNotNull;
-import static org.testng.Assert.fail;
-import static org.testng.Assert.assertTrue;
-import static org.testng.Assert.assertFalse;
-
-import com.github.javaparser.ParseProblemException;
-import com.github.javaparser.StaticJavaParser;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.dataformat.xml.XmlMapper;
+import com.github.javaparser.JavaParser;
+import com.github.javaparser.ParseResult;
+import com.github.javaparser.ParserConfiguration;
 import com.github.javaparser.ast.CompilationUnit;
+import com.google.common.collect.ImmutableMap;
 import io.swagger.parser.OpenAPIParser;
 import io.swagger.v3.oas.models.Components;
 import io.swagger.v3.oas.models.OpenAPI;
@@ -16,20 +15,20 @@ import io.swagger.v3.oas.models.info.Info;
 import io.swagger.v3.oas.models.media.Schema;
 import io.swagger.v3.oas.models.servers.Server;
 import io.swagger.v3.parser.core.models.ParseOptions;
-
 import org.openapitools.codegen.MockDefaultGenerator.WrittenTemplateBasedFile;
+import org.openapitools.codegen.java.assertions.JavaFileAssert;
+import org.openapitools.codegen.model.ModelMap;
+import org.openapitools.codegen.model.ModelsMap;
 import org.openapitools.codegen.utils.ModelUtils;
 import org.testng.Assert;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
+
+import static org.testng.Assert.*;
 
 public class TestUtils {
 
@@ -89,7 +88,7 @@ public class TestUtils {
         return openAPI;
     }
 
-    public static OpenAPI createOpenAPIWithOneSchema(String name, Schema schema) {
+    public static OpenAPI createOpenAPIWithOneSchema(String name, Schema<?> schema) {
         OpenAPI openAPI = createOpenAPI();
         openAPI.setComponents(new Components());
         openAPI.getComponents().addSchemas(name, schema);
@@ -116,18 +115,44 @@ public class TestUtils {
 
     public static void ensureContainsFile(List<File> generatedFiles, File root, String filename) {
         Path path = root.toPath().resolve(filename);
-        assertTrue(generatedFiles.contains(path.toFile()), "File '" + path.toAbsolutePath().toString() + "' was not found in the list of generated files");
+        assertTrue(generatedFiles.contains(path.toFile()), "File '" + path.toAbsolutePath() + "' was not found in the list of generated files");
     }
 
     public static void ensureDoesNotContainsFile(List<File> generatedFiles, File root, String filename) {
         Path path = root.toPath().resolve(filename);
-        assertFalse(generatedFiles.contains(path.toFile()), "File '" + path.toAbsolutePath().toString() + "' was found in the list of generated files");
+        assertFalse(generatedFiles.contains(path.toFile()), "File '" + path.toAbsolutePath() + "' was found in the list of generated files");
+    }
+
+    public static void validatePomXmlFiles(final List<File> files) {
+        if (files == null 
+            || files.isEmpty() 
+            || files.stream().noneMatch(f -> f.getName().equals("pom.xml"))) return;
+        
+        final XmlMapper mapper = new XmlMapper();
+        for (File file : files) {
+            if (!"pom.xml".equals(file.getName())) continue;
+
+            try {
+                JsonNode pomContents = mapper.readTree(file);
+                assertValidPomXml(pomContents);
+            } catch (IOException exception) {
+                throw new RuntimeException(exception);
+            }
+        };
+    }
+
+    private static void assertValidPomXml(final JsonNode pom) {
+        assertFalse(pom.path("dependencies").isEmpty());
+        assertNotNull(pom.get("name"));
+        assertNotNull(pom.get("artifactId"));
+        assertNotNull(pom.get("groupId"));
+        assertNotNull(pom.get("version"));
     }
 
     public static void validateJavaSourceFiles(Map<String, String> fileMap) {
         fileMap.forEach( (fileName, fileContents) -> {
                 if (fileName.endsWith(".java")) {
-                    assertValidJavaSourceCode(fileContents, fileName);
+                    assertValidJavaSourceCode(fileContents);
                 }
             }
         );
@@ -135,39 +160,36 @@ public class TestUtils {
 
     public static void validateJavaSourceFiles(List<File> files) {
         files.forEach( f -> {
-                    String fileName = f.getName();
-                    if (fileName.endsWith(".java")) {
+                    if (f.getName().endsWith(".java")) {
                         String fileContents = "";
                         try {
-                            fileContents = new String(Files.readAllBytes(f.toPath()), StandardCharsets.UTF_8);
+                            fileContents = Files.readString(f.toPath());
                         } catch (IOException ignored) {
 
                         }
-                        assertValidJavaSourceCode(fileContents, fileName);
+                        assertValidJavaSourceCode(fileContents);
                     }
                 }
         );
     }
 
-    public static void assertValidJavaSourceCode(String javaSourceCode, String filename) {
-        try {
-            CompilationUnit compilation = StaticJavaParser.parse(javaSourceCode);
-            assertTrue(compilation.getTypes().size() > 0, "File: " + filename);
-        }
-        catch (ParseProblemException ex) {
-            fail("Java parse problem: " + filename, ex);
-        }
+    public static void assertValidJavaSourceCode(String javaSourceCode) {
+        ParserConfiguration config = new ParserConfiguration();
+        config.setLanguageLevel(ParserConfiguration.LanguageLevel.JAVA_11);
+        JavaParser parser = new JavaParser(config);
+        ParseResult<CompilationUnit> parseResult = parser.parse(javaSourceCode);
+        assertTrue(parseResult.isSuccessful(), String.valueOf(parseResult.getProblems()));
     }
 
     public static void assertFileContains(Path path, String... lines) {
         try {
-            String generatedFile = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            String generatedFile = Files.readString(path);
             String file = linearize(generatedFile);
             assertNotNull(file);
             for (String line : lines)
                 assertTrue(file.contains(linearize(line)), "File does not contain line [" + line + "]");
         } catch (IOException e) {
-            fail("Unable to evaluate file " + path.toString());
+            fail("Unable to evaluate file " + path);
         }
     }
 
@@ -178,13 +200,143 @@ public class TestUtils {
     public static void assertFileNotContains(Path path, String... lines) {
         String generatedFile = null;
         try {
-            generatedFile = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
+            generatedFile = Files.readString(path);
         } catch (IOException e) {
-            fail("Unable to evaluate file " + path.toString());
+            fail("Unable to evaluate file " + path);
         }
         String file = linearize(generatedFile);
         assertNotNull(file);
         for (String line : lines)
             assertFalse(file.contains(linearize(line)));
+    }
+
+    public static void assertFileNotExists(Path path) {
+        try {
+            Files.readString(path);
+            fail("File exists when it should not: " + path);
+        } catch (IOException e) {
+            // File exists, pass.
+            assertTrue(true);
+        }
+    }
+
+    public static void assertFileExists(Path path) {
+        try {
+            Files.readString(path);
+            // File exists, pass.
+            assertTrue(true);
+        } catch (IOException e) {
+            fail("File does not exist when it should: " + path);
+        }
+    }
+
+    public static void assertExtraAnnotationFiles(String baseOutputPath) {
+
+        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/EmployeeEntity.java"))
+                .assertTypeAnnotations()
+                    .containsWithName("javax.persistence.Entity")
+                    .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"employees\""))
+                .toType()
+                .hasProperty("assignments")
+                    .assertPropertyAnnotations()
+                    .containsWithNameAndAttributes("javax.persistence.OneToMany", ImmutableMap.of("mappedBy", "\"employee\""))
+                    .toProperty()
+                .toType();
+
+        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/Employee.java"))
+                .assertTypeAnnotations()
+                    .containsWithName("javax.persistence.MappedSuperclass")
+                .toType()
+                .hasProperty("id")
+                    .assertPropertyAnnotations()
+                    .containsWithName("javax.persistence.Id")
+                    .toProperty()
+                .toType()
+                .hasProperty("email")
+                    .assertPropertyAnnotations()
+                    .containsWithName("org.hibernate.annotations.Formula")
+                    .toProperty()
+                .toType()
+                .hasProperty("hasAcceptedTerms")
+                    .assertPropertyAnnotations()
+                    .containsWithName("javax.persistence.Transient")
+                    .toProperty()
+                .toType();
+
+        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/SurveyGroupEntity.java"))
+                .assertTypeAnnotations()
+                    .containsWithName("javax.persistence.Entity")
+                    .containsWithNameAndAttributes("javax.persistence.Table", ImmutableMap.of("name", "\"survey_groups\""))
+                .toType()
+                .hasProperty("assignments")
+                    .assertPropertyAnnotations()
+                    .containsWithName("javax.persistence.OneToMany")
+                    .containsWithNameAndAttributes("javax.persistence.JoinColumn", ImmutableMap.of("name", "\"survey_group_id\""))
+                    .toProperty()
+                .toType()
+                .hasProperty("disabled")
+                    .assertPropertyAnnotations()
+                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("nullable", "false"))
+                    .toProperty()
+                .toType();
+
+        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/SurveyGroup.java"))
+                .assertTypeAnnotations()
+                    .containsWithName("javax.persistence.MappedSuperclass")
+                    .containsWithName("javax.persistence.EntityListeners")
+                .toType()
+                .hasProperty("id")
+                    .assertPropertyAnnotations()
+                    .containsWithName("javax.persistence.Id")
+                    .containsWithNameAndAttributes("javax.persistence.GeneratedValue", ImmutableMap.of("generator", "\"UUID\""))
+                    .containsWithNameAndAttributes("org.hibernate.annotations.GenericGenerator", ImmutableMap.of("name", "\"UUID\"","strategy", "\"org.hibernate.id.UUIDGenerator\""))
+                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("name", "\"id\"","updatable", "false","nullable", "false"))
+                    .toProperty()
+                .toType()
+                .hasProperty("createdDate")
+                    .assertPropertyAnnotations()
+                    .containsWithName("org.springframework.data.annotation.CreatedDate")
+                    .toProperty()
+                .toType()
+                .hasProperty("createdBy")
+                    .assertPropertyAnnotations()
+                    .containsWithName("org.springframework.data.annotation.CreatedBy")
+                    .toProperty()
+                .toType()
+                .hasProperty("modifiedDate")
+                    .assertPropertyAnnotations()
+                    .containsWithName("org.springframework.data.annotation.LastModifiedDate")
+                    .toProperty()
+                .toType()
+                .hasProperty("modifiedBy")
+                    .assertPropertyAnnotations()
+                    .containsWithName("org.springframework.data.annotation.LastModifiedBy")
+                    .toProperty()
+                .toType()
+                .hasProperty("opportunityId")
+                    .assertPropertyAnnotations()
+                    .containsWithNameAndAttributes("javax.persistence.Column", ImmutableMap.of("unique", "true"))
+                    .toProperty()
+                .toType()
+                .hasProperty("submissionStatus")
+                    .assertPropertyAnnotations()
+                    .containsWithName("javax.persistence.Transient")
+                    .toProperty()
+                .toType();
+
+        JavaFileAssert.assertThat(java.nio.file.Paths.get(baseOutputPath + "/CompanyDto.java"))
+            .hasProperty("priceCategory")
+                .assertPropertyAnnotations()
+                .containsWithNameAndAttributes("IgnoreForRoles", ImmutableMap.of("value", "\"MEDIA_ADMIN\""));
+    }
+
+    public static ModelsMap createCodegenModelWrapper(CodegenModel cm) {
+        ModelsMap objs = new ModelsMap();
+        List<ModelMap> modelMaps = new ArrayList<>();
+        ModelMap modelMap = new ModelMap();
+        modelMap.setModel(cm);
+        modelMaps.add(modelMap);
+        objs.setModels(modelMaps);
+        return objs;
     }
 }
